<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>java-online-trining</groupId>
  <artifactId>java20-scoped-values</artifactId>
  <version>1.0.0</version>
  
  <properties>
		<maven.compiler.source>20</maven.compiler.source>
		<maven.compiler.target>20</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<!-- This maven-compiler-plugin configuration enables the preview-mode for the preview features 
			and the Java 19 concurrency features that are in the incubator state-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>19</release>
					<compilerArgs>
						<arg>--enable-preview</arg>
						<arg>--add-modules=jdk.incubator.concurrent</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
  
</project>